After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 684697 - Home and Trash no longer appearing in search
Home and Trash no longer appearing in search
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: general
3.5.x
Other Linux
: Normal major
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-09-24 04:38 UTC by Michael Gratton
Modified: 2012-09-26 17:53 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Michael Gratton 2012-09-24 04:38:17 UTC
After upgrading gnome-shell to 3.5.92, Nautilus/Files no longer appears in the Activities pane: The launcher is no longer in the list of applications, and Nautilus places/bookmarks no longer appear when searching for them.

This makes it impossible to launch Nautilus from gnome-shell, which makes file management rather difficult.

gnome-shell 3.5.92
nautilus 3.4.2
Comment 1 Jasper St. Pierre (not reading bugmail) 2012-09-24 04:55:26 UTC
Nautilus search results are now provided by an updated nautilus.
Comment 2 Michael Gratton 2012-09-24 05:06:37 UTC
Oh, thanks, I wasn't aware of that. Updating to Nautilus 3.5.92 brought bookmarks back, but places such as Home and Trash are still missing, as is a generic Nautilus/Files launcher in the applications list. Should this bug be moved to Nautilus?
Comment 3 Jasper St. Pierre (not reading bugmail) 2012-09-24 05:27:30 UTC
Probably.

*punt*
Comment 4 Jasper St. Pierre (not reading bugmail) 2012-09-24 05:30:11 UTC
Retitled to be about the the Home/Trash search results. Can you file the "nautilus not appearing in applications" bug separately as a bug for nautilus, and link it here when done, please?
Comment 5 Michael Gratton 2012-09-24 13:20:30 UTC
The missing Files bug might be a downstream or local config issue. I'll look into it and report the bug if needed.
Comment 6 Cosimo Cecchi 2012-09-26 17:53:40 UTC
Thanks for the report, I now pushed a fix for this to nautilus master.