shell-search-provider: include Home and Trash among the results

https://bugzilla.gnome.org/show_bug.cgi?id=684697